[package]
name = "factom"
version = "2.1.1"
authors = ["Mitchell Berry <17392435+MitchellBerry@users.noreply.github.com>"]
edition = "2018"
repository = "https://github.com/kompendium-llc/factom-rust-client"
homepage = "https://github.com/kompendium-llc/factom-rust-client"
license = "Apache-2.0"
readme = "readme.md"

description = "Factom API client"

[dependencies]
url = "2.1.0"
bytes = "0.5.2"
http = "0.2"
futures = "0.3.1"
futures-util = "0.3.1"
serde_json = "1.0.44"
serde_derive = "1.0.103"
serde = { version = "1.0.103", features = ["derive"] }
hyper-tls = "0.4.0"
hyper = "0.13.0"
tokio = {version = "0.2.4", optional = true, features=["macros"] } 
tokio-executor = {version = "=0.2.0-alpha.6", optional = true }

[dev-dependencies]
rand = "0.7.2"
criterion = "0.3"
sha2 = "0.8.0"
bs58 = "0.2.2"
hex = "0.4.0"

[[bench]]
name = "benches"
harness = false

[badges]
maintenance = { status = "passively-maintained" }

[features]
default = ["tokio", "tokio-executor"]